force-app/main/default/objects/Sprint_Task__c/Sprint_Task__c.object-meta.xml
<CustomObject>
    <label>Sprint Task</label>
    <nameField>
        <displayFormat>TA{0000}</displayFormat>
        <label>Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>