force-app/main/default/objects/Sprint_Task__c/fields/Google_Drive__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive__c</fullName>
    <label>Google Drive</label>
    <type>Url</type>
</CustomField>