force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Taks_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Taks_To_Do__c</fullName>
    <formula>IF ( CASE ( Sprint_Task_Status__c,
&quot;Defined&quot;, 1,
&quot;In-Progress&quot;, 1,
&quot;Complete&quot;, 0,
0 ) == 1 , Sprint_Task_Estimate__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Do</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>