force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_Days_to_Completion__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_Days_to_Completion__c</fullName>
    <formula>IF((Sprint_Task_Due_Date__c - Today()) &lt;= 0, 0, Sprint_Task_Due_Date__c - Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>