force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_Detail__c</fullName>
    <label>Task Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>