force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_Developer__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sprint_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>