force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>