force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_Estimate__c</fullName>
    <label>Task Estimate</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>