force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_Subject__c</fullName>
    <label>Subject</label>
    <length>250</length>
    <type>Text</type>
</CustomField>