force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_Testing_Time__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_Testing_Time__c</fullName>
    <label>Testing Time</label>
    <type>Time</type>
</CustomField>