force-app/main/default/objects/Sprint_Task__c/fields/Sprint_Task_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Task_User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Sprint Tasks</relationshipLabel>
    <relationshipName>Sprint_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>