force-app/main/default/objects/Sprint_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Deploy Manual Step</fullName>
            </value>
            <value>
                <fullName>Post Deploy Manual Step</fullName>
            </value>
            <value>
                <fullName>Test Script</fullName>
            </value>
            <value>
                <fullName>Technical Solution</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>